--- a/packages/web/src/styles/global.css
+++ b/packages/web/src/styles/global.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
+
+.my-btn {
+  @apply bg-blue-700 hover:bg-blue-600 text-white rounded px-4 py-2;
+}
 @tailwind utilities;
